# monk

./: .gitignore  README.md  monk.cabal  stack.yaml
src/: FirstTry.hs  Main.hs  SecondTry.hs
