name:                monk
version:             0.1.0.0
--synopsis:
description:         An experiment at getting abstract binding trees in Haskell.
homepage:            https://github.com/jez/monk#readme
license:             MIT
license-file:        LICENSE
author:              Jake Zimmerman
maintainer:          zimmerman.jake@gmail.com
copyright:           2017 Jake Zimmerman
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable monk
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       FirstTry
                     , SecondTry
  default-language:    Haskell2010
  build-depends:       base
                     , monad-gen
